# market-analysis

./: .gitignore  .mcp.json  README.md  SETUP.md  SETUP_COMPLETE.md  TELEGRAM_SETUP.md  memoria-proyecto.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/web/: .env.example  next.config.mjs  package.json  tsconfig.tsbuildinfo  vercel.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/alerts/: page.tsx
apps/web/src/app/audit/: page.tsx
apps/web/src/app/feedback/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: AlertActions.tsx  ConfigInput.tsx  EvidenceView.tsx  FlagToggle.tsx  RealtimeAlerts.tsx
apps/web/src/lib/: api.ts  auth.ts
docs/: MVP_BLUEPRINT.md
infra/docs/: runbook.md
infra/sql/: 0001_init.sql  0002_hardening.sql
services/worker/: .env.example  Dockerfile  README.md  pyproject.toml
services/worker/market_monitor_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/worker/scripts/: check_setup.py
services/worker/tests/: conftest.py  test_alerting_and_telegram.py  test_config_modes.py  test_detectors.py  test_llm_parsing.py  test_normalize.py  test_scoring.py
services/worker/worker/: alerting.py  config.py  features.py  llm.py  main.py  models.py  normalize.py  odds_client.py  persistence.py  replay.py  scheduler.py  scoring.py  settings.py  telegram.py
services/worker/worker/detectors/: __init__.py  base.py  divergence.py  drift.py  persistence_amp.py  price_move.py  rarity.py  reversal.py  sharp_leader.py
(+19 files in other folders)
