[project]
name = "market-monitor-worker"
version = "0.1.0"
description = "Football odds market monitoring worker (NOT auto-betting)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "supabase>=2.5",
    "jsonschema>=4.22",
]

[project.optional-dependencies]
llm = ["anthropic>=0.34"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.ruff]
line-length = 100
